[project]
name = "lancedb-tables"
version = "0.1.2"
description = "An embedded streaming OLAP data pipeline with LanceDB"
authors = [{ name = "Evan K", email = "ekcopersonal@gmail.com" }]
dependencies = ["lancedb==0.6.13"]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/lancedb_tables"]
